bk_ida/gccida/g3/splice_child_die
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splice_child_die/src/dwarf2out.c:5530:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 4588, "AT_ref"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splice_child_die/src/dwarf2out.c:5589:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5055, "splice_child_die"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splice_child_die/src/obj/dwarf2out.o] Error 1
